refactor: 메서드 분리 및 메서드 순서 통일